--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "bootstrap": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
