--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
-    "react-copy-to-clipboard": "^5.0.4",
     "react-cookies": "^0.1.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
