--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
@@ -14,11 +16,12 @@
     "bootstrap": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
-    "react-copy-to-clipboard": "^5.0.4",
     "react-cookies": "^0.1.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.2",
     "react-router-dom": "^5.2.0",
